<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>2.1.5.RELEASE</version>
    <relativePath/>
  </parent>

  <groupId>com.tsengfhy.vservice</groupId>
  <artifactId>vservice</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <name>VService</name>
  <description>General software development platform based on SpringBoot</description>

  <modules>
    <module>vservice-basic-core</module>
    <module>vservice-basic-utils</module>
    <module>vservice-basic-jpa</module>
    <module>vservice-basic-web</module>
    <module>vservice-basic-redis</module>
    <module>vservice-basic-quartz</module>
    <module>vservice-basic-fastdfs</module>
    <module>vservice-basic-kafka</module>
    <module>vservice-basic-elasticsearch</module>
    <module>vservice-basic-mail</module>
    <module>vservice-basic-sms</module>
    <module>vservice-cluster-client</module>
    <module>vservice-cluster-server</module>
  </modules>

  <properties>
    <java.version>1.8</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
      <exclusions>
        <exclusion>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-logging</artifactId>
        </exclusion>
      </exclusions>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-log4j2</artifactId>
      <optional>true</optional>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-dependencies</artifactId>
        <version>Greenwich.SR1</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.springframework.cloud</groupId>
        <artifactId>spring-cloud-alibaba-dependencies</artifactId>
        <version>0.9.0.RELEASE</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>javax.servlet</groupId>
        <artifactId>javax.servlet-api</artifactId>
        <version>3.1.0</version>
      </dependency>
      <dependency>
        <groupId>commons-beanutils</groupId>
        <artifactId>commons-beanutils</artifactId>
        <version>1.9.3</version>
      </dependency>
      <dependency>
        <groupId>commons-io</groupId>
        <artifactId>commons-io</artifactId>
        <version>2.6</version>
      </dependency>
      <dependency>
        <groupId>com.google.guava</groupId>
        <artifactId>guava</artifactId>
        <version>23.0</version>
      </dependency>
      <dependency>
        <groupId>org.reflections</groupId>
        <artifactId>reflections</artifactId>
        <version>0.9.11</version>
      </dependency>
      <dependency>
        <groupId>com.alibaba</groupId>
        <artifactId>fastjson</artifactId>
        <version>1.2.58</version>
      </dependency>
      <dependency>
        <groupId>com.github.ulisesbocchio</groupId>
        <artifactId>jasypt-spring-boot</artifactId>
        <version>2.1.1</version>
      </dependency>
      <dependency>
        <groupId>io.swagger</groupId>
        <artifactId>swagger-annotations</artifactId>
        <version>1.5.20</version>
      </dependency>
      <dependency>
        <groupId>io.springfox</groupId>
        <artifactId>springfox-swagger2</artifactId>
        <version>2.9.2</version>
      </dependency>
      <dependency>
        <groupId>io.springfox</groupId>
        <artifactId>springfox-swagger-ui</artifactId>
        <version>2.9.2</version>
      </dependency>
      <dependency>
        <groupId>com.alibaba</groupId>
        <artifactId>druid-spring-boot-starter</artifactId>
        <version>1.1.10</version>
      </dependency>
      <dependency>
        <groupId>com.github.tobato</groupId>
        <artifactId>fastdfs-client</artifactId>
        <version>1.26.5</version>
      </dependency>

      <dependency>
        <groupId>com.tsengfhy.vservice</groupId>
        <artifactId>vservice-basic-core</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tsengfhy.vservice</groupId>
        <artifactId>vservice-basic-elasticsearch</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tsengfhy.vservice</groupId>
        <artifactId>vservice-basic-fastdfs</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tsengfhy.vservice</groupId>
        <artifactId>vservice-basic-jpa</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tsengfhy.vservice</groupId>
        <artifactId>vservice-basic-kafka</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tsengfhy.vservice</groupId>
        <artifactId>vservice-basic-mail</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tsengfhy.vservice</groupId>
        <artifactId>vservice-basic-quartz</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tsengfhy.vservice</groupId>
        <artifactId>vservice-basic-redis</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tsengfhy.vservice</groupId>
        <artifactId>vservice-basic-sms</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tsengfhy.vservice</groupId>
        <artifactId>vservice-basic-utils</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tsengfhy.vservice</groupId>
        <artifactId>vservice-basic-web</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tsengfhy.vservice</groupId>
        <artifactId>vservice-cluster-client</artifactId>
        <version>${project.version}</version>
      </dependency>
      <dependency>
        <groupId>com.tsengfhy.vservice</groupId>
        <artifactId>vservice-cluster-server</artifactId>
        <version>${project.version}</version>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <compilerArguments>
            <bootclasspath>${JAVA_HOME}/jre/lib/rt.jar</bootclasspath>
          </compilerArguments>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>